完善oss上传功能，添加swagger文档
